iotgrammer.parent/iotgrammer.idea/src/main/xtext-gen/org/xtext/example/mydsl/idea/parser/antlr/internal/PsiInternalMyDsl.g
/*
 * generated by Xtext 2.9.2
 */
grammar PsiInternalMyDsl;

options {
	superClass=AbstractPsiAntlrParser;
}

@lexer::header {
package org.xtext.example.mydsl.idea.parser.antlr.internal;

// Hack: Use our own Lexer superclass by means of import. 
// Currently there is no other way to specify the superclass for the lexer.
import org.eclipse.xtext.parser.antlr.Lexer;
}

@parser::header {
package org.xtext.example.mydsl.idea.parser.antlr.internal;

import org.eclipse.xtext.idea.parser.AbstractPsiAntlrParser;
import org.xtext.example.mydsl.idea.lang.MyDslElementTypeProvider;
import org.eclipse.xtext.idea.parser.TokenTypeProvider;
import org.eclipse.xtext.parser.antlr.XtextTokenStream;
import org.eclipse.xtext.parser.antlr.XtextTokenStream.HiddenTokens;
import org.xtext.example.mydsl.services.MyDslGrammarAccess;

import com.intellij.lang.PsiBuilder;
}

@parser::members {

	protected MyDslGrammarAccess grammarAccess;

	protected MyDslElementTypeProvider elementTypeProvider;

	public PsiInternalMyDslParser(PsiBuilder builder, TokenStream input, MyDslElementTypeProvider elementTypeProvider, MyDslGrammarAccess grammarAccess) {
		this(input);
		setPsiBuilder(builder);
    	this.grammarAccess = grammarAccess;
		this.elementTypeProvider = elementTypeProvider;
	}

	@Override
	protected String getFirstRuleName() {
		return "Rules";
	}

}

//Entry rule entryRuleRules
entryRuleRules returns [Boolean current=false]:
	{ markComposite(elementTypeProvider.getRulesElementType()); }
	iv_ruleRules=ruleRules
	{ $current=$iv_ruleRules.current; }
	EOF;

// Rule Rules
ruleRules returns [Boolean current=false]
:
	(
		(
			{
				markComposite(elementTypeProvider.getRules_RuleFragmentsRuleFragmentsParserRuleCall_0ElementType());
			}
			lv_ruleFragments_0_0=ruleRuleFragments
			{
				doneComposite();
				if(!$current) {
					associateWithSemanticElement();
					$current = true;
				}
			}
		)
	)*
;

//Entry rule entryRuleRuleFragments
entryRuleRuleFragments returns [Boolean current=false]:
	{ markComposite(elementTypeProvider.getRuleFragmentsElementType()); }
	iv_ruleRuleFragments=ruleRuleFragments
	{ $current=$iv_ruleRuleFragments.current; }
	EOF;

// Rule RuleFragments
ruleRuleFragments returns [Boolean current=false]
:
	(
		{
			markLeaf(elementTypeProvider.getRuleFragments_RuleKeyword_0ElementType());
		}
		otherlv_0='rule'
		{
			doneLeaf(otherlv_0);
		}
		(
			(
				{
					markLeaf(elementTypeProvider.getRuleFragments_RuleNameIDTerminalRuleCall_1_0ElementType());
				}
				lv_ruleName_1_0=RULE_ID
				{
					if(!$current) {
						associateWithSemanticElement();
						$current = true;
					}
				}
				{
					doneLeaf(lv_ruleName_1_0);
				}
			)
		)
		{
			markLeaf(elementTypeProvider.getRuleFragments_LeftCurlyBracketKeyword_2ElementType());
		}
		otherlv_2='{'
		{
			doneLeaf(otherlv_2);
		}
		(
			(
				{
					markComposite(elementTypeProvider.getRuleFragments_RuleBodyRuleBodyParserRuleCall_3_0ElementType());
				}
				lv_ruleBody_3_0=ruleRuleBody
				{
					doneComposite();
					if(!$current) {
						associateWithSemanticElement();
						$current = true;
					}
				}
			)
		)
		{
			markLeaf(elementTypeProvider.getRuleFragments_RightCurlyBracketKeyword_4ElementType());
		}
		otherlv_4='}'
		{
			doneLeaf(otherlv_4);
		}
	)
;

//Entry rule entryRuleRuleBody
entryRuleRuleBody returns [Boolean current=false]:
	{ markComposite(elementTypeProvider.getRuleBodyElementType()); }
	iv_ruleRuleBody=ruleRuleBody
	{ $current=$iv_ruleRuleBody.current; }
	EOF;

// Rule RuleBody
ruleRuleBody returns [Boolean current=false]
:
	(
		{
			markLeaf(elementTypeProvider.getRuleBody_WhenKeyword_0ElementType());
		}
		otherlv_0='when'
		{
			doneLeaf(otherlv_0);
		}
		(
			(
				{
					markComposite(elementTypeProvider.getRuleBody_EventEventParserRuleCall_1_0ElementType());
				}
				lv_Event_1_0=ruleEvent
				{
					doneComposite();
					if(!$current) {
						associateWithSemanticElement();
						$current = true;
					}
				}
			)
		)
		(
			(
				{
					markComposite(elementTypeProvider.getRuleBody_SubEventSubEventParserRuleCall_2_0ElementType());
				}
				lv_subEvent_2_0=ruleSubEvent
				{
					doneComposite();
					if(!$current) {
						associateWithSemanticElement();
						$current = true;
					}
				}
			)
		)*
	)
;

//Entry rule entryRuleEvent
entryRuleEvent returns [Boolean current=false]:
	{ markComposite(elementTypeProvider.getEventElementType()); }
	iv_ruleEvent=ruleEvent
	{ $current=$iv_ruleEvent.current; }
	EOF;

// Rule Event
ruleEvent returns [Boolean current=false]
:
	(
		(
			(
				{
					markComposite(elementTypeProvider.getEvent_AttributeAttributeEnumRuleCall_0_0ElementType());
				}
				lv_attribute_0_0=ruleAttribute
				{
					doneComposite();
					if(!$current) {
						associateWithSemanticElement();
						$current = true;
					}
				}
			)
		)
		(
			(
				{
					markComposite(elementTypeProvider.getEvent_SymbolSymbolEnumRuleCall_1_0ElementType());
				}
				lv_symbol_1_0=ruleSymbol
				{
					doneComposite();
					if(!$current) {
						associateWithSemanticElement();
						$current = true;
					}
				}
			)
		)
		(
			(
				{
					markLeaf(elementTypeProvider.getEvent_ValueINTTerminalRuleCall_2_0ElementType());
				}
				lv_value_2_0=RULE_INT
				{
					if(!$current) {
						associateWithSemanticElement();
						$current = true;
					}
				}
				{
					doneLeaf(lv_value_2_0);
				}
			)
		)
	)
;

//Entry rule entryRuleSubEvent
entryRuleSubEvent returns [Boolean current=false]:
	{ markComposite(elementTypeProvider.getSubEventElementType()); }
	iv_ruleSubEvent=ruleSubEvent
	{ $current=$iv_ruleSubEvent.current; }
	EOF;

// Rule SubEvent
ruleSubEvent returns [Boolean current=false]
:
	(
		{
			markLeaf(elementTypeProvider.getSubEvent_ThenKeyword_0ElementType());
		}
		otherlv_0='then '
		{
			doneLeaf(otherlv_0);
		}
		(
			(
				{
					markComposite(elementTypeProvider.getSubEvent_AmountEventActionEnumRuleCall_1_0ElementType());
				}
				lv_amountEvent_1_0=ruleAction
				{
					doneComposite();
					if(!$current) {
						associateWithSemanticElement();
						$current = true;
					}
				}
			)
		)
		(
			(
				{
					markComposite(elementTypeProvider.getSubEvent_EntityEntityEnumRuleCall_2_0ElementType());
				}
				lv_entity_2_0=ruleEntity
				{
					doneComposite();
					if(!$current) {
						associateWithSemanticElement();
						$current = true;
					}
				}
			)
		)
	)
;

// Rule Attribute
ruleAttribute returns [Boolean current=false]
:
	(
		(
			{
				markLeaf(elementTypeProvider.getAttribute_TEMPERATUREEnumLiteralDeclaration_0ElementType());
			}
			enumLiteral_0='temperature'
			{
				doneLeaf(enumLiteral_0);
			}
		)
		    |
		(
			{
				markLeaf(elementTypeProvider.getAttribute_VIBRATIONEnumLiteralDeclaration_1ElementType());
			}
			enumLiteral_1='vibration'
			{
				doneLeaf(enumLiteral_1);
			}
		)
		    |
		(
			{
				markLeaf(elementTypeProvider.getAttribute_HUMIDITYEnumLiteralDeclaration_2ElementType());
			}
			enumLiteral_2='humidity'
			{
				doneLeaf(enumLiteral_2);
			}
		)
	)
;

// Rule Symbol
ruleSymbol returns [Boolean current=false]
:
	(
		(
			{
				markLeaf(elementTypeProvider.getSymbol_GREATEREnumLiteralDeclaration_0ElementType());
			}
			enumLiteral_0='<'
			{
				doneLeaf(enumLiteral_0);
			}
		)
		    |
		(
			{
				markLeaf(elementTypeProvider.getSymbol_LESSEnumLiteralDeclaration_1ElementType());
			}
			enumLiteral_1='>'
			{
				doneLeaf(enumLiteral_1);
			}
		)
	)
;

// Rule Action
ruleAction returns [Boolean current=false]
:
	(
		(
			{
				markLeaf(elementTypeProvider.getAction_TURN_ONEnumLiteralDeclaration_0ElementType());
			}
			enumLiteral_0='turn_on'
			{
				doneLeaf(enumLiteral_0);
			}
		)
		    |
		(
			{
				markLeaf(elementTypeProvider.getAction_TURN_OFFEnumLiteralDeclaration_1ElementType());
			}
			enumLiteral_1='turn_off'
			{
				doneLeaf(enumLiteral_1);
			}
		)
	)
;

// Rule Entity
ruleEntity returns [Boolean current=false]
:
	(
		(
			{
				markLeaf(elementTypeProvider.getEntity_LIGHT_BULBEnumLiteralDeclaration_0ElementType());
			}
			enumLiteral_0='light_bulb'
			{
				doneLeaf(enumLiteral_0);
			}
		)
		    |
		(
			{
				markLeaf(elementTypeProvider.getEntity_FANEnumLiteralDeclaration_1ElementType());
			}
			enumLiteral_1='fan'
			{
				doneLeaf(enumLiteral_1);
			}
		)
		    |
		(
			{
				markLeaf(elementTypeProvider.getEntity_ACEnumLiteralDeclaration_2ElementType());
			}
			enumLiteral_2='ac'
			{
				doneLeaf(enumLiteral_2);
			}
		)
	)
;

RULE_ID : '^'? ('a'..'z'|'A'..'Z'|'_') ('a'..'z'|'A'..'Z'|'_'|'0'..'9')*;

RULE_INT : ('0'..'9')+;

RULE_STRING : ('"' ('\\' .|~(('\\'|'"')))* '"'|'\'' ('\\' .|~(('\\'|'\'')))* '\'');

RULE_ML_COMMENT : '/*' ( options {greedy=false;} : . )*'*/';

RULE_SL_COMMENT : '//' ~(('\n'|'\r'))* ('\r'? '\n')?;

RULE_WS : (' '|'\t'|'\r'|'\n')+;

RULE_ANY_OTHER : .;
